--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -83,6 +83,24 @@
 .review__list {
   overflow: hidden;
 }
+.review__list-nodata {
+  display: flex;
+  height: 50vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  p {
+    font-size: 28px;
+  }
+  .btn__rvWrite {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 15px 20px;
+    border-radius: 28px;
+    border: 1px solid #000000;
+    font-size: 18px;
+  }
+}
 .review__list--cont {
   margin-right: -40px;
   margin-bottom: 20px;
@@ -133,7 +151,6 @@
     padding-right: 115px;
     margin-bottom: 15px;
     font-size: 24px;
-    line-height: 1.3;
     word-break: keep-all;
   }
   .rv__thumnb {
@@ -415,6 +432,7 @@
   width: 100%;
   min-height: 100vh;
   z-index: 1;
+  line-height: 1.3;
 }
 .detail__image {
   width: 100%;
@@ -494,7 +512,6 @@
     margin-bottom: 10px;
     @include mixins.PtdMedium();
     font-size: 24px;
-    line-height: 1.3;
     word-break: keep-all;
   }
   .product__price {
@@ -1061,7 +1078,6 @@
   }
   .review__text {
     font-size:24px;
-    line-height: 1.3;
     @include mixins.PtdRegular();
     word-break: keep-all;
   }
@@ -1106,7 +1122,6 @@
   .review__writter {
     padding-right: 30px;
     @include mixins.PtdMedium();
-    line-height: 1.3;
     word-break: keep-all;
     span {
       font-size: 20px;
@@ -1357,10 +1372,64 @@
 
 // suggest__item
 .suggest__item {
+  .suggest__title {
+    padding-left: 20px;
+    padding-bottom: 30px;
+    font-size: 40px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
   .menu {
     .menu__item {
-      width: calc(25% - 4px)
+      width: calc(25% - 4px);
+      border-radius: 52px;
+      overflow: hidden;
+    }
+    .marquee {
+      height: 66px;
+    }
+    .menu__tag {
+      font-size: 24px;
     }
   }
 
+  @include breakpoints.mobile() {
+    .suggest__title { 
+      font-size: 16px;
+      padding-bottom: 15px;
+    }
+    .menu {
+      width: 100%;
+      .menu__list {
+        display: flex;
+        padding-left: 15px;
+        padding-right: 15px;
+        overflow-x: scroll;
+        -webkit-overflow-scrolling: touch;
+        flex-wrap: inherit;
+        &:after {
+          content: '';
+          display: block;
+          clear: both;
+        }
+      }
+      .menu__item { 
+        flex: none;
+        float: left;
+        width: calc((100%/2.5) - 2px);
+        border-radius: 32px;
+      }
+      .marquee {
+        height: 28.5px;
+      }
+      .menu__tag {
+        font-size: 12px;
+      }
+      .menu__swiper {
+        .swiper-pagination-progressbar {
+          bottom: 20%;
+        }
+      }
+    }
+  }
 }
