--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -1285,6 +1285,7 @@
 .review__container {
   .rvwrap__head {
     display: flex;
+    position: relative;
     width: 100%;
     height: 44px;
     margin-bottom: 20px;
@@ -1311,6 +1312,9 @@
     display: flex;
     height: 100%;
     align-items: center;
+    .select {
+      height: 100%;
+    }
   }
   .head__title {
     font-size: 32px;
@@ -1353,6 +1357,76 @@
   .review_paging {
     justify-content: center;
   }
+
+  .search {
+    .search__layer {
+      position: absolute;
+      left: 50%;
+      top: 0;
+      z-index: 5;
+      width: max-content;
+      padding: 36px 30px;
+      background-color: #fff;
+      border: 1px solid #000;
+      border-radius: 42px;
+      @include mixins.translate(-50%, 0);
+    }
+    .search__form {
+      legend {
+        display: block;
+        margin-bottom: 30px;
+        font-weight: 500;
+        font-size: 32px;
+        text-align: center;
+      }
+      label {
+        margin: 0;
+      }
+      .search__row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .search__field {
+          position: relative;
+          margin: 0 10px 0 4px;
+        }
+        .search__input {
+          height: 44px;
+          margin: 0;
+        }
+        .search__button {
+					position: absolute;
+					right: 15px;
+					top: 50%;
+					margin-top: -7.5px;
+					@include icons.retina-sprite(icons.$ico-header-search-group);
+				}
+        ::-webkit-input-placeholder {
+          font-size: 16px;
+        }
+        ::-moz-placeholder {
+          font-size: 16px;
+        }
+        .select {
+          height: 44px;
+          select {
+            width: 100%;
+            margin: 0;
+          }
+        }
+      }
+    }
+    .filter {
+      &:not(:first-child) {
+        margin-top: 40px;
+      }
+      input[type='checkbox'] {
+        & + label {
+          font-weight: 400;
+        }
+      }
+    }
+  }
 }
 
 // suggest__item
@@ -1362,5 +1436,4 @@
       width: calc(25% - 4px)
     }
   }
-
 }
