상품상세 작업중

--- a/src/web/assets/css/_components.scss
+++ b/src/web/assets/css/_components.scss
@@ -130,6 +130,7 @@
 		position: absolute;
 		right: 30px;
 		top: 40px;
+		z-index: 1;
 		.btn__close {
 			display: block;
 			@include icons.retina-sprite(icons.$ico-close-group);
