--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -1007,6 +1007,35 @@
     border: 1px solid #000000;
     background-color: #ffffff;
   }
+
+  @include breakpoints.mobile() {
+    .layer__wrap {
+      width: calc(100% - 100px);
+      height: auto;
+      min-height: auto;
+      padding-bottom: 15px;
+      border-radius: 30px;
+    }
+    .layer__content {
+      width: 100%;
+      padding-top: 45px;
+    }
+    .ico_basket {
+      @include mixins.sprite(mo_icons.$ico-basket-mo);
+    }
+    p {
+      font-size: 12px;
+    }
+    .layer__button {
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      .btn {
+        border-radius: 25px;
+        padding: 16px 0;
+      }
+    }
+  }
 }
 .product_reviewwrite {
   .layer__wrap {
@@ -1319,11 +1348,41 @@
       order: 2;
       width: 100%;
       border-right: 0;
+      padding: 20px 20px;
       overflow-y: hidden;
     }
     .cont_summary {
       order: 1;
-      width: 100%;
+      width: calc(100% - 40px);
+      padding: 0 0 20px;
+      margin: 20px;
+      border-bottom: 1px solid #000000;
+    }
+    .review__text {
+      font-size: 16px;
+      line-height: 1.3;
+    }
+    .rv__figure {
+      width: 50px;
+      height: 50px;
+      margin-right: 10px;
+    }
+    .rv__prname {
+      font-size: 14px;
+    }
+    .rv__prcnt {
+      p {
+        font-size: 10px;
+      }
+    }
+    .rv__product {
+      margin-bottom: 20px;
+    }
+    .other__title {
+      font-size: 16px;
+    }
+    .other__tag {
+      font-size: 12px;
     }
   }
 }
