--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -170,6 +170,7 @@
     padding-right: 115px;
     margin-bottom: 15px;
     font-size: 24px;
+    line-height: 1.3;
     word-break: keep-all;
   }
   .rv__thumnb {
