--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -22,21 +22,31 @@
 }
 .ic_star_blank {
   display: inline-block;
-  // @include icons.retina-sprite(icons.$ico-star-group);
+  // @include icons.retina-sprite(icons.$ico-star-blank-group);
   vertical-align: middle;
 }
 .ic_star_half {
   display: inline-block;
+  @include icons.retina-sprite(icons.$ico-start-half-group);
   vertical-align: middle;
 }
 
 .review__sort {
   position: relative;
   flex: 1;
+  &.isOpen {
+    .review_sort--head {
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .review__sorting {
+      display: block;
+    }
+  }
 }
 .review_sort--head {
   position: relative;
-  width: 115px;
+  width: 120px;
   padding: 15px 10px 15px 20px;
   border-radius: 15px;
   border: 1px solid #000000;
@@ -71,20 +81,27 @@
 .review__sorting {
   display: none;
   position: absolute;
-  top: 0;
+  top: 42px;
   width: 100%;
-  padding: 12px 10px 12px 20px;
+  padding: 0 10px 12px 20px;
   border-radius: 15px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
   border: 1px solid #000000;
   border-top: 0;
   background-color: #ffffff;
+  z-index: 1;
   li {
+    display: block;
     text-align: left;
   }
-  a {
+  .sort__select {
     display: block;
     padding: 15px 0;
     font-size: 18px;
+  }
+  .selected {
+    display: none;
   }
 }
 
@@ -653,7 +670,7 @@
       z-index: 1;
       .btn__buy {
         display: inline-block;
-        padding: 5px 10px;
+        padding: 2px 10px;
         border: 1px solid #000000;
         border-radius: 35px;
         font-size: 30px;
@@ -927,10 +944,14 @@
     height: 80px;
     margin-bottom: 20px;
     border-bottom: 1px solid #000000;
+    // justify-content: space-between;
     &:after {
       content: '';
       display: block;
       clear: both;
+    }
+    .review__sort {
+      flex: inherit;
     }
     .review__etc {
       flex: 1;
@@ -1098,21 +1119,22 @@
     }
   }
   .rv__grade {
+    margin-top: 15px;
     .rv_star {
       margin-top: 15px;
       margin-bottom: 20px;
     }
     .ic_star {
       margin-right: 5px;
-      @include icons.retina-sprite(icons.$ico-bk-star-group);
+      @include icons.retina-sprite(icons.$ico-star-group);
     }
     .ic_star_half {
       margin-right: 5px;
-      @include icons.retina-sprite(icons.$ico-bk-star-half-group);
+      @include icons.retina-sprite(icons.$ico-star-half-group);
     }
     .ic_star_blank {
       margin-right: 5px;
-      @include icons.retina-sprite(icons.$ico-bk-star-blank-group);
+      @include icons.retina-sprite(icons.$ico-star-blank-group);
     }
   }
   .rv__photo {
@@ -1254,17 +1276,29 @@
     width: 280px;
     padding: 35px 30px;
   }
+  .rv__head {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+  .rv__date {
+    @include mixins.PtdMedium();
+  }
   .rv_star {
-    margin-top: 15px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 15px;
   }
   .ic_star {
     margin-right: 5px;
-    @include icons.retina-sprite(icons.$ico-star-24-group);
+    @include icons.retina-sprite(icons.$ico-star-group);
   }
   .ic_star_blank {
     margin-right: 5px;
-    @include icons.retina-sprite(icons.$ico-star-blank-24-group);
+    @include icons.retina-sprite(icons.$ico-star-blank-group);
+  }
+  .ic_star_half {
+    margin-right: 5px;
+    @include icons.retina-sprite(icons.$ico-star-half-group);
   }
   .rv__product {
     display: flex;
@@ -1274,9 +1308,10 @@
     width: 60px;
     height: 60px;
     margin-right: 20px;
+    margin-top: 35px;
   }
   .rv__box {
-    width: calc(100% - 148px);
+    width: calc(100% - 80px);
   }
   .rv__prname {
     font-size: 20px;
@@ -1294,10 +1329,11 @@
     font-size:24px;
     @include mixins.PtdRegular();
     word-break: keep-all;
+    line-height: 1.3;
   }
   .review__image {
     width: 100%;
-    margin: 15px 0;
+    margin: 20px 0;
   }
 
   .rv__moreinfo {
@@ -1343,7 +1379,7 @@
     }
   }
   .rv__other {
-    margin-top: 20px;
+    margin-top: 35px;
   }
   .other__title {
     margin-bottom: 12px;
@@ -1387,24 +1423,29 @@
       overflow-y: auto;
     }
     .layer__content {
-      display: flex;
-      flex-direction: column;
+      display: block;
       height: auto;
       overflow-y: auto;
     }
     .cont_detail {
-      order: 2;
-      width: 100%;
+      width: calc(100% - 40px);
       border-right: 0;
-      padding: 20px 20px;
+      padding: 0 0 20px;
+      margin: 20px 20px;
       overflow-y: hidden;
+      border-bottom: 1px solid #000000;
     }
     .cont_summary {
-      order: 1;
       width: calc(100% - 40px);
       padding: 0 0 20px;
-      margin: 35px 20px 20px;
-      border-bottom: 1px solid #000000;
+      margin: 0 20px 20px;
+    }
+    .rv__head {
+      display: block;
+    }
+    .rv__date {
+      margin-top: 5px;
+      font-size: 12px;
     }
     .review__text {
       font-size: 16px;
@@ -1420,11 +1461,16 @@
     }
     .rv__prcnt {
       p {
-        font-size: 10px;
+        font-size: 12px;
+        line-height: 1.3;
+        text-align: center;
       }
     }
     .rv__product {
       margin-bottom: 20px;
+    }
+    .rv__other {
+      margin-top: 20px;
     }
     .other__title {
       font-size: 16px;
@@ -1575,13 +1621,17 @@
 // review
 .review__container {
   .rvwrap__head {
-    display: flex;
     position: relative;
     width: 100%;
     height: 44px;
     margin-bottom: 20px;
     align-items: center;
-    justify-content: space-between;
+    &:after {
+      content: '';
+      display: block;
+      clear: both;
+      overflow: hidden;
+    }
   }
   select {
     width: 165px;
@@ -1599,17 +1649,23 @@
     font-size: 16px;
     margin: 0 3px;
   }
+  .head__title {
+    float: left;
+    display: flex;
+    height: 100%;
+    margin-right: 110px;
+    align-items: center;
+    font-size: 32px;
+    font-weight: 500;
+  }
   .head__search {
+    float: left;
     display: flex;
     height: 100%;
     align-items: center;
     .select {
       height: 100%;
     }
-  }
-  .head__title {
-    font-size: 32px;
-    font-weight: 500;
   }
   .btn__sopen {
     display: inline-block;
@@ -1624,12 +1680,18 @@
     margin: 0 3px;
   }
   .head__sort {
+    float: right;
     height: 100%;
-   .review_sort--head {
-     padding-top: 13px;
-     padding-bottom: 13px;
-     font-size: 16px;
-   } 
+    .review_sort--head {
+      padding-top: 13px;
+      padding-bottom: 13px;
+      font-size: 16px;
+    } 
+    .review__sorting {
+      .sort__select {
+        font-size: 16px;
+      }
+    }
   }
 
   .review__list--cont {
@@ -1651,6 +1713,7 @@
 
   .search {
     .search__layer {
+      display: none;
       position: absolute;
       left: 50%;
       top: 0;
@@ -1663,6 +1726,14 @@
       @include mixins.translate(-50%, 0);
     }
     .search__form {
+      .btn__close {
+        position: absolute;
+        right: 30px;
+        top: 35px;
+        display: block;
+        @include icons.retina-sprite(icons.$ico-close-group);
+        cursor: pointer;
+      }
       legend {
         display: block;
         margin-bottom: 30px;
@@ -1684,6 +1755,7 @@
         .search__input {
           height: 44px;
           margin: 0;
+          padding-right: 40px;
         }
         .search__button {
 					position: absolute;
@@ -1709,11 +1781,33 @@
     }
     .filter {
       &:not(:first-child) {
-        margin-top: 40px;
+        margin-top: 20px;
       }
       input[type='checkbox'] {
         & + label {
           font-weight: 400;
+        }
+      }
+      .filter__row {
+        display: flex;
+        padding: 20px 0;
+      }
+      .filter__left {
+        width: 100px;
+      }
+      .filter__right {
+        display: flex;
+        p {
+          flex: 1;
+          min-width:80px;
+          @include mixins.PtdRegular();
+          margin-right: 15px;
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+        input {
+          margin-right: 5px;
         }
       }
     }
