메뉴 폰트 적용

--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -70,7 +70,7 @@ https://blazetype.eu/
 }
 
 @font-face {
-	font-family: 'Sabon';
+	font-family: 'LibreCaslonText';
 	font-weight: normal;
-	src: local('Sabon Bold'), url('../fonts/Sabon_Bold.ttf') format('truetype');
+	src: local('Libre Caslon Text Bold'), url('../fonts/LibreCaslonText-Bold.ttf') format('truetype');
 }
