--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -368,6 +368,49 @@
 			}
 		}
 	}
+
+	.cube {
+		position: relative;
+		height: 54px;
+		transform-style: preserve-3d;
+		&.cube--rotated {
+			animation: cube 2s linear forwards;
+		}
+		.cube__face {
+			display: flex;
+			align-items: center;
+			overflow: hidden;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			white-space: nowrap;
+			&:nth-child(odd) {
+				background-color: #ffb5d1;
+				color: #fffe72;
+			}
+			&:nth-child(even) {
+				background-color: #5eecfa;
+				color: #fff;
+			}
+		}
+		.cube__face--front {
+			transform: rotateY(0deg) translateZ(27px);
+		}
+		.cube__face--top {
+			transform: rotateX(90deg) translateZ(27px);
+		}
+		.cube__face--back {
+			transform: rotateX(180deg) translateZ(27px);
+		}
+		.cube__face--bottom {
+			transform: rotateX(-90deg) translateZ(27px);
+		}
+		.cube__text {
+			margin: 0 50px;
+			font-size: 48px;
+			letter-spacing: -0.05em;
+		}
+	}
 	
 	@include breakpoints.mobile() {
 		.best-menu__list {
@@ -800,6 +843,15 @@
 	}
 	100% {
 		opacity: 1;
+	}
+}
+
+@keyframes cube {
+	0% {
+		@include mixins.transform(rotateX(0deg));
+	}
+	100% {
+		@include mixins.transform(rotateX(-360deg));
 	}
 }
 
