--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -336,6 +336,7 @@
 				align-items: center;
 				height: 33px;
 				padding: 0 15px 0 14px;
+				margin-right: 4px;
 				border: 1px solid #000;
 				border-radius: 100vw;
 				text-align: center;
