--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -6,7 +6,8 @@
 	margin: 0;
 	padding: 0;
 	color: inherit;
-	font: inherit;
+	// font: inherit;
+	font-family: 'AT surt', 'Pretendard Variable', -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 }
 
 *,
